fixed stats off screen error

--- a/agricultural-microworlds.client/src/Styles/index.module.css
+++ b/agricultural-microworlds.client/src/Styles/index.module.css
@@ -85,6 +85,11 @@
   flex: 1;
   flex-grow: 1;
   margin-left: 20px;
+  /**
+   * These need to be here, if not then the stats will be off the top of the screen
+  */
+  top: 5px;
+  position: absolute;
 }
 
 .weatherDataContainer {
